--- a/task3.css
+++ b/task3.css
@@ -36,7 +36,7 @@ body{
 }
 
 .hero-section .container, .main{
-  background-image: url("img/button.png");
+  background-image: url("button.png");
   background-size: cover; /* This property ensures the background image covers the entire container */
   background-position: 50%; 
   font-weight: bold;
@@ -44,7 +44,7 @@ body{
 }
 
 .aboutRolex {
-  background-image: url("img/button.png");
+  background-image: url("button.png");
   background-size: cover; /* This property ensures the background image covers the entire container */
   background-position: 50%;
 }
