--- a/task3.css
+++ b/task3.css
@@ -85,3 +85,42 @@ body{
   font-size: 1.1em;
 }
 
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.watch {
+  position: relative;
+  cursor: pointer;
+}
+
+.watch img {
+  width: 200px;
+  height: auto;
+  transition: transform 0.3s;
+}
+
+.watch:hover img {
+  transform: scale(1.1);
+}
+
+.details {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.watch:hover .details {
+  opacity: 1;
+}
+
+
