--- a/task3.css
+++ b/task3.css
@@ -94,6 +94,7 @@ body{
 .watch {
   position: relative;
   cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .watch img {
@@ -108,17 +109,20 @@ body{
 
 .details {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
+  transform: translateY(100%);
+  transition: transform 0.3s;
   opacity: 0;
-  transition: opacity 0.3s;
 }
 
 .watch:hover .details {
+  transform: translateY(0);
   opacity: 1;
 }
+
