--- a/task3.css
+++ b/task3.css
@@ -5,6 +5,20 @@ body {
   font-weight: bold;
   color: white;
   margin: 0;
+  animation: background-gradient 15s ease-in-out infinite;
+  background-image: radial-gradient(circle at center, #ff9999, #66b3ff);
+}
+
+@keyframes background-gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .navbar {
