--- a/task3.css
+++ b/task3.css
@@ -39,7 +39,7 @@ body {
 
 .section {
   opacity: 0;
-  transform: translateY(25px);
+  transform: translateY(20px);
   transition: opacity 0.5s, transform 1s;
 }
 
@@ -67,7 +67,6 @@ body {
 .watch {
   /* Set a fixed size for watches */
   width: 250px; /* Adjust as needed */
-  height: 250px; /* Adjust as needed */
   margin: 10px;
   background-size: cover;
   background-position: center;
@@ -134,8 +133,8 @@ body {
 }
 
 .favorite-item {
-  width: 45%;
-  margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
   text-align: center;
   border: 1px solid #ddd;
   padding: 10px;
