--- a/task3.css
+++ b/task3.css
@@ -139,8 +139,15 @@ body {
   cursor: pointer; /* Add hover effect (optional) */
 }
 
+.favorites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .favorite-item {
   width: 100%;
+  height: 100%;
   text-align: center;
   border: 1px solid #ddd;
   padding: 10px;
@@ -150,6 +157,14 @@ body {
 .favorite-item img {
   width: 100%;
   margin-bottom: 10px;
+}
+
+.favsize{
+  font-size: 1.8em;
+}
+
+.favbutton:hover{
+  opacity: 0.5;
 }
 
 .remove-btn {
